--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
+  "name": "@carnesen/buzz",
+  "version": "0.0.0",
+  "main": "app.js",
   "description": "A gameshow buzzer app",
   "scripts": {
+    "test": "echo 'No tests :('",
     "start": "bin/www.js",
     "start:debug": "DEBUG=* npm run start",
-    "start:watch": "nodemon bin/www.js"
+    "start:watch": "nodemon bin/www.js",
+    "preversion": "npm test",
+    "postversion": "npm publish"
   },
   "dependencies": {
     "angular": "1.4.8",
@@ -16,16 +22,13 @@
     "socket.io": "1.3.7",
     "socket.io-client": "1.3.7"
   },
-  "name": "buzz",
-  "version": "1.0.0",
-  "main": "app.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/carnesen/buzz.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Chris Arnesen",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/carnesen/buzz/issues"
   },
