--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "start:watch": "nodemon bin/www.js"
   },
   "dependencies": {
-    "angular": "1.7.9",
-    "angular-route": "1.4.8",
-    "body-parser": "1.13.2",
-    "express": "4.13.1",
-    "jade": "1.11.0",
-    "morgan": "1.9.1",
-    "nodemon": "1.8.1",
-    "socket.io": "1.3.7",
-    "socket.io-client": "1.3.7"
+    "angular": "1.8.0",
+    "angular-route": "1.8.0",
+    "body-parser": "1.19.0",
+    "express": "4.17.1",
+    "morgan": "1.10.0",
+    "nodemon": "2.0.4",
+    "pug": "3.0.0",
+    "socket.io": "2.3.0",
+    "socket.io-client": "2.3.0"
   },
   "repository": {
     "type": "git",
