--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carnesen/buzz",
-  "description": "A game-show buzzer app websocket example",
-  "version": "1.0.0",
+  "description": "A game-show buzzer WebSocket example app",
+  "version": "2022.2.0",
   "private": true,
   "scripts": {
     "test": "./test.sh",
@@ -20,10 +20,10 @@
     "socket.io": "4.1.2",
     "socket.io-client": "4.1.2"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/carnesen/buzz.git"
+  "devDependencies": {
+    "@carnesen/dev": "0.1.0"
   },
+  "repository": "github:carnesen/buzz",
   "keywords": [],
   "author": "Chris Arnesen",
   "license": "MIT",
